--- a/style.css
+++ b/style.css
@@ -118,6 +118,14 @@ a {
 
 /* projet */
 
+#projet .projet{
+	flex-direction: column;
+	text-align: center;
+	max-width: 1500px;
+	margin: 0 auto;
+	padding: 100px 0;
+}
+
 #projet .card{
 	margin: 10px;
 	width: 35vh;
@@ -138,7 +146,7 @@ a {
 	height: 100%;
 	width: 100%;
 	background-color: rgb(0, 0, 0);
-	opacity: 0.7;
+	opacity: 0.4;
 	z-index: -1;
 }
 
@@ -151,11 +159,18 @@ a {
 }
 
 #projet .card p{
+	max-height: 11vh;
+	overflow: clip;
 	margin-top: 1.5vh;
-	margin-bottom: 5vh;
+	margin-bottom: 2vh;
 	margin-left: 1vh;
-	font-size: 1.5rem;
+	font-size: 1.5vh;
 	color: white;
+}
+
+
+#projet .card button{
+	margin: ;
 }
 
 #projet .projet_haut{
@@ -191,65 +206,3 @@ a {
     border-radius: 3px;
     border: 0px dashed #e2e2e2;
   }
-
-  /* Services Section */
-#services .services {
-	flex-direction: column;
-	text-align: center;
-	max-width: 1500px;
-	margin: 0 auto;
-	padding: 100px 0;
-}
-#services .service-top {
-	max-width: 500px;
-	margin: 0 auto;
-}
-#services .service-bottom {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-wrap: wrap;
-	margin-top: 50px;
-}
-#services .service-item {
-	flex-basis: 80%;
-	display: flex;
-	align-items: flex-start;
-	justify-content: center;
-	flex-direction: column;
-	padding: 30px;
-	border-radius: 10px;
-	background-image: url(./img/img-1.png);
-	background-size: cover;
-	margin: 10px 5%;
-	position: relative;
-	z-index: 1;
-	overflow: hidden;
-}
-#services .service-item::after {
-	content: '';
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-	opacity: 0.9;
-	z-index: -1;
-}
-#services .service-bottom .icon {
-	height: 80px;
-	width: 80px;
-	margin-bottom: 20px;
-}
-#services .service-item h2 {
-	font-size: 2rem;
-	color: white;
-	margin-bottom: 10px;
-	text-transform: uppercase;
-}
-#services .service-item p {
-	color: white;
-	text-align: left;
-}
-/* End Services Section */
